# new-peak-project

./: .gitignore  .pytest.ini  README.md  bionetgen_example.bngl  error.md  log-book.md  main.py  mlerp.md  pipdeptree.txt  pyproject.toml  requirements.txt  run_bionetgen.py  run_example.py  run_model_tests.py  run_test.py  test_utils_demo.py
.clinerules/: cline-requirements.md  no-long-commands.md
.clinerules/workflows/: merge-to-main.md
.devcontainer/: Dockerfile  devcontainer.json
.roo/commands/: merge-to-main.md
docs/: README.md  api_reference.md  configuration_based_scripts.md  data_loading_system.md  ode_configuration_reference.md  ode_documentation_readme.md  ode_network_architecture.md  ode_system_overview.md  ode_usage_guide.md  usage_guide.md
example/: bionetgen_example.gdat  bionetgen_example.net  bionetgen_example_sbml.xml
src/: biochem_cascade_workflow_1.ipynb  biochemical_cascade_generator.ipynb  biochemical_cascade_generator_repeat_1.ipynb  dotenv.ipynb  drug_cascade_model_tests.ipynb  informal_testing.ipynb  model_construction.ipynb  model_identification.ipynb  ode_testing_suite.ipynb  parameter_estimation.ipynb  peak3_modelling.ipynb  scaffold_generator.ipynb
src/data/: example_data.csv  peak3_data.csv  peak3_data_grb2_asap1.csv
src/example/: example_data.csv  example_data_scaffold.csv
src/examples/: extended_data_generation_example.py  robust_data_generation_example.py
src/ml/: Workflow.py  note.md
src/models/: ArchtypeCollections.py  DrugModelSpecification.py  LinkedParameters.py  ModelBuilder.py  Parallel.py  Reaction.py  Utils.py  (+6 more)
(+339 files in other folders)
