[project]
name = "new-peak-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "antimony>=2.15.0",
    "boto3>=1.42.9",
    "botocore>=1.42.9",
    "ipykernel>=6.29.5",
    "joblib>=1.5.0",
    "libroadrunner>=2.8.0",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numba>=0.61.2",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.1.0",
    "python-libsbml>=5.20.5",
    "pyyaml>=6.0.2",
    "salib>=1.5.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statannotations>=0.7.2",
    "sympy>=1.14.0",
    "tables>=3.10.2",
    "tqdm>=4.67.1",
    "tslearn>=0.6.4",
]
